--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>estilos</title>
     </head>
     <body>
-        <h1>estilos en linea</h1>
-        <p>parrafo en linea</p>
-        <img src="VENYOBD7YNHR5NTVIVSGI33NFI.avif"
+        <h1 style="color: rgb(9, 9, 247); font-size: 50px;">estilos en linea</h1>
+        <p style="color: brown; font-family: Verdana, Geneva, Tahoma, sans-serif;">parrafo en linea</p>
+        <img src="VENYOBD7YNHR5NTVIVSGI33NFI.avif" style="border: 10px solid black;">
     </body>
 </html>
