--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html>
     <head>
     <title>estilos</title>
+    <style>
+        h1 {
+            color: rgb(9, 9, 247);
+            font-size: 50px;
+        }
+        p {
+            color: red;
+            font-family: Verdana;
+        }
+        img{
+            border: 20px solid black;
+            width: 20%;
+        }
+    </style>
     </head>
     <body>
-        <h1 style="color: rgb(9, 9, 247); font-size: 50px;">estilos en linea</h1>
-        <p style="color: brown; font-family: Verdana, Geneva, Tahoma, sans-serif;">parrafo en linea</p>
-        <img src="VENYOBD7YNHR5NTVIVSGI33NFI.avif" style="border: 10px solid black;">
+        <h1>estilos en linea</h1>
+        <p>parrafo en linea</p>
+        <img src="VENYOBD7YNHR5NTVIVSGI33NFI.avif">
     </body>
 </html>
